erDiagram
    User ||--o{ Client : "has"
    User ||--o{ Project : "owns"
    User ||--o{ Payment : "receives"
    User ||--o{ Task : "creates"
    User ||--o{ Note : "writes"
    User ||--o{ ActivityLog : "generates"
    
    Client ||--o{ Project : "has"
    Client ||--o{ Note : "has"
    
    Project ||--o{ Payment : "has"
    Project ||--o{ Task : "contains"
    Project ||--o{ Note : "has"
    
    User {
        uuid id PK
        string username UK
        string email
        string password "hashed"
        string first_name
        string last_name
        boolean is_active
        boolean is_staff
        boolean is_superuser
        datetime date_joined
    }
    
    Client {
        uuid id PK
        uuid user FK
        string name
        string email
        string phone
        string company
        text address
        string status "active/inactive/prospective"
        text notes
        datetime created_at
        datetime updated_at
    }
    
    Project {
        uuid id PK
        uuid user FK
        uuid client FK
        string name
        text description
        string status "pending/in_progress/completed/on_hold/cancelled"
        string priority "low/medium/high/urgent"
        date start_date
        date deadline
        decimal budget "12,2"
        integer progress "0-100"
        datetime created_at
        datetime updated_at
    }
    
    Payment {
        uuid id PK
        uuid user FK
        uuid project FK
        decimal amount "12,2"
        string status "pending/paid/overdue/cancelled"
        string payment_method "bank_transfer/paypal/stripe/cash/check/other"
        date due_date
        date paid_date
        text description
        string invoice_number
        datetime created_at
        datetime updated_at
    }
    
    Task {
        uuid id PK
        uuid user FK
        uuid project FK
        string title
        text description
        string status "todo/in_progress/completed/cancelled"
        string priority "low/medium/high/urgent"
        date due_date
        decimal estimated_hours "5,2"
        decimal actual_hours "5,2"
        datetime created_at
        datetime updated_at
    }
    
    Note {
        uuid id PK
        uuid user FK
        uuid project FK "nullable"
        uuid client FK "nullable"
        string title
        text content
        boolean is_private
        datetime created_at
        datetime updated_at
    }
    
    ActivityLog {
        uuid id PK
        uuid user FK
        string action "create/update/delete/login/logout/status_change/payment_received"
        string model_type "client/project/payment/task/note/user"
        uuid model_id
        text description
        datetime timestamp
        string ip_address
    }